# agricultural-zoning-ml

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TECHDEBT.md  manifest.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_checks.ps1
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-on-tag.yml  test.yml
docs/: README.md  _config.yml  architecture.md  index.md
docs/compliance/: iso42001_compliance.md  normative_dependencies.md  privacy_policy.md
docs/examples/: advanced_examples.md  advanced_examples.md.backup  basic_usage.md  simple_usage.md
docs/technical/: api_documentation.md  architecture_overview.md  deployment_guide.md  functions_reference.md  interface_spec.md  technical_documentation.md
docs/user_guide/: faq.md  installation.md  quick_start.md  troubleshooting.md  user_guide.md
inputs/: predio_recortado_x.tif
outputs/20250604_192848_k3_mz0.5/: estadisticas_zonas.csv  metrics_zoning.json  puntos_muestreo.gpkg  zonificacion_agricola.gpkg
outputs/20250604_193114_k3_mz0.5/: estadisticas_zonas.csv  metricas_clustering.json  puntos_muestreo.gpkg  zonificacion_agricola.gpkg
outputs/20250604_193139_k4_mz0.5/: estadisticas_zonas.csv  metricas_clustering.json  puntos_muestreo.gpkg  zonificacion_agricola.gpkg
outputs/20250606_104135_k4_mz0.5/: metricas_clustering.json  puntos_muestreo.gpkg  zonificacion_agricola.gpkg
outputs/20250606_214547_k5_mz0.5/: estadisticas_zonas.csv  metricas_clustering.json  puntos_muestreo.gpkg  zonificacion_agricola.gpkg
schemas/: README.md  manifest.schema.json  zoning_output.schema.json
src/pascal_zoning/: __init__.py  config.py  interface.py  logging_config.py  pipeline.py  viz.py  zoning.py
tests/integration/: test_workflow.py
tests/unit/: conftest.py  test_config.py  test_interface.py  test_pipeline.py  test_viz.py  test_zoning_core.py
