[project]
name = "pascal-zoning-ml"
version = "0.1.0-alpha"
description = "Agricultural zoning pipeline consuming outputs of pascal-ndvi-block"
authors = [ { name="AustralMetrics SpA" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
keywords = ["agriculture", "zoning", "machine-learning", "gis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # "pascal-ndvi-block>=1.0.3",  # Comentado temporalmente para pruebas
    "geopandas>=0.14.0",
    "scikit-learn>=1.3.0",
    "shapely>=2.0.2",
    "typer>=0.9.0",
    "loguru>=0.7.2",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- formato y linting -------------------------------------------------
[tool.black]
line-length = 88          # ancho Black por defecto
target-version = ["py311"]

[tool.flake8]
max-line-length = 88      # mismo ancho para evitar falsos positivos
extend-ignore = ["E203", "W503"]  # conflictos conocidos Black ↔ flake-8

[tool.mypy]
# Desactiva únicamente el chequeo de genéricos sin parámetros.
disable_error_code = ["type-arg"]


